# fastapi-background-jobs-checkpoints-resume

./: .gitignore  README.en.md  README.md  TEORIA.md  pyproject.toml
scripts/: demo_client.py  demo_hard_kill.py
src/disappearing_tasks/: __init__.py  config.py  lifespan.py  logging.py  main.py
src/disappearing_tasks/api/: router.py
src/disappearing_tasks/api/v1/: tasks.py
src/disappearing_tasks/domain/: models.py  ports.py
src/disappearing_tasks/infrastructure/: sqlite_task_store.py
src/disappearing_tasks/services/: task_manager.py
