[project]
name = "fastapi-background-jobs-checkpoints-resume"
version = "0.1.0"
description = "FastAPI background jobs with SQLite checkpoints, auto-resume after hard kill, and graceful shutdown"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.21.0",
]

[project.scripts]
fastapi-background-jobs-checkpoints-resume = "disappearing_tasks.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/disappearing_tasks"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
